<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mozio.todd.MainActivity">

    <!-- Registration Button -->
    <TextView android:id="@+id/registration_text_view"
        android:text="@string/patient_registration_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/standard_button_height"
        android:layout_alignParentBottom="true"
        android:textColor="@color/colorWhite"
        android:gravity="center"
        android:onClick="onRegistration"
        android:textSize="@dimen/regular_font_size"
        android:background="@color/colorPrimary"/>

    <!-- Search -->
    <LinearLayout android:id="@+id/search_layout"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText android:id="@+id/patient_id_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:maxLines="1"
            android:inputType="text"
            android:hint="@string/search_hint"/>
        <TextView android:text="@string/find_title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/standard_button_height"
            android:layout_marginBottom="10dp"
            android:layout_alignParentBottom="true"
            android:textColor="@color/colorWhite"
            android:gravity="center"
            android:onClick="onSearch"
            android:textSize="@dimen/regular_font_size"
            android:background="@color/colorPrimary"/>
        <View android:layout_width="match_parent"
            android:layout_height="@dimen/standard_line_height"
            android:background="@color/colorPrimary"/>
    </LinearLayout>

    <!-- Patient Info -->
    <LinearLayout android:id="@+id/patient_info_layout"
        android:layout_below="@id/search_layout"
        android:layout_above="@id/registration_text_view"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView android:id="@+id/full_name_text_view"
            android:layout_width="match_parent"
            android:textColor="@color/colorBlack"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textStyle="bold"
            android:textSize="@dimen/large_font_size" />

        <!-- Migraine -->
        <CheckBox android:text="@string/migraine_title"
            android:id="@+id/migraine_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <!-- Drug -->
        <CheckBox android:text="@string/hallucinogenic_drug_usage_title"
            android:id="@+id/drug_usage_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <!-- Diagnose -->
        <TextView android:text="@string/diagnose_title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/standard_button_height"
            android:layout_marginBottom="10dp"
            android:layout_alignParentBottom="true"
            android:textColor="@color/colorWhite"
            android:gravity="center"
            android:onClick="onDiagnose"
            android:textSize="@dimen/regular_font_size"
            android:background="@color/colorPrimary"/>

        <!-- LINE -->
        <View android:layout_width="match_parent"
            android:layout_height="@dimen/standard_line_height"
            android:background="@color/colorPrimary"/>

        <!-- List of Records -->
        <ListView android:id="@+id/medical_record_list_view"
            android:cacheColorHint="@android:color/transparent"
            android:listSelector="@android:color/transparent"
            android:divider="@null"
            android:dividerHeight="0dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
</RelativeLayout>
